--- a/member.html
+++ b/member.html
@@ -8,6 +8,7 @@
     <h3>Members</h3>
     <ol>
       <li>CG</li>
+      <li>Kochalamba</li>
       <li>Periyavar</li>
       <li>Reddy</li>
       <li>NS</li>
