--- a/member.html
+++ b/member.html
@@ -8,7 +8,7 @@
     <h3>Members</h3>
     <ol>
       <li>CG</li>
-      <li>Kochalamba</li>
+      <li>Kotchalamba</li>
       <li>Periyavar</li>
       <li>Reddy</li>
       <li>NS</li>
