--- a/member.html
+++ b/member.html
@@ -13,7 +13,7 @@
       <li>Reddy</li>
       <li>NS</li>
       <li>Paalan</li>
-      <li>Ilayaperaati</li>
+      <li>SithaCUM</li>
     </ol>
     <hr>
     <h3>Petition to join RAJANAYAGI ILLAM</h3>
