--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>This website belongs to NS</title>
   </head>
-  <body>
+  <body style="background-color: #F5F5DC">
     <img src="raja.jpg" alt="RAJANAYAGI">
   <h1>RAJANAYAGI ILLAM</h1>
   <p><em>Ithu engal <stro>ILLAM</stro></em></p>
