--- a/member.html
+++ b/member.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Member</title>
   </head>
-  <body>
+  <body style="background-color: #FFE5B4">
     <h3>Members</h3>
     <ol>
       <li>CG</li>
